# AI-Audio-Upsample-Training

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/upmix/: __init__.py  cli.py
src/upmix/dsp/: __init__.py  baseline.py  crossover.py  downmix.py  stft.py
src/upmix/io/: __init__.py  audio.py  layouts.py
tests/: conftest.py  test_audio_io.py  test_baseline.py  test_cli.py  test_crossover.py  test_downmix.py  test_layouts.py  test_stft.py
